# gabalah

./: CHECKLIST.md  CLAUDE.md  Cargo.toml  PERF_CHECKLIST.md  README.md  STATUS.md  agent.md  build.rs  config.json
assets/icons/: window-icon-64.rgba
benches/: cpu.rs  renderer.rs
shaders/: comic_halftone_pop.wgsl  crimson_cluster.wgsl  crt.wgsl  funk_spectrum.wgsl  heart_pixels.wgsl  jelly_tiles.wgsl  no_effect.wgsl  wiggle_ripple.wgsl
src/: alu.rs  app.rs  cartridge.rs  config.rs  cpu.rs  err.rs  lib.rs  main.rs  ops.rs  ram.rs  renderer.rs  rom_loader.rs
src/cpu/: alu.rs  core.rs  cpu.rs  map.rs  mod.rs  ops.rs
src/memory/: mod.rs  ram.rs
src/ui/: mod.rs  pixels_backend.rs  terminal_backend.rs  wgpu_shader_backend.rs
src/ui/shaders/: crt.wgsl
tests/: architecture.rs  cartridge.rs  cpu.rs  ops.rs
tools/: generate-app-icons.ps1
