[package]
name = "gabalah"
version = "0.1.0"
edition = "2021"

[lib]
name = "gabalah"
path = "src/lib.rs"

[[test]]
name = "ops"
path = "tests/ops.rs"

[dependencies]
byteorder = "1"
env_logger = "0.10"
getrandom = "0.2"
clipline = "0.1.1"
log = "0.4"
pixels = "0.15"
pollster = "0.3"
randomize = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "0.19"
winit = "0.29"
winit_input_helper = "0.15"

[dev-dependencies]
naga = { version = "0.19", features = ["wgsl-in"] }
