[package]
name = "gabalah"
version = "0.1.0"
edition = "2021"
description = "A Game Boy emulator with shader-driven display effects."

[lib]
name = "gabalah"
path = "src/lib.rs"

[[test]]
name = "ops"
path = "tests/ops.rs"

[dependencies]
byteorder = "1"
env_logger = "0.10"
getrandom = "0.2"
clipline = "0.1.1"
log = "0.4"
pixels = "0.15"
pollster = "0.3"
randomize = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
naga = { version = "0.19", features = ["wgsl-in"] }
wgpu = "0.19"
winit = "0.29"
winit_input_helper = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "renderer"
harness = false

[[bench]]
name = "cpu"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[package.metadata.bundle]
name = "Gabalah"
identifier = "io.github.philipp.gabalah"
icon = ["assets/icons/gabalah.ico", "assets/icons/icon.iconset/*.png"]
short_description = "A Game Boy emulator with shader-driven display effects."
