[package]
name = "gabalah"
version = "0.1.0"
edition = "2021"
description = "A Game Boy emulator with shader-driven display effects."

[features]
default = [
    "frontend",
    "frontend-pixels",
    "frontend-wgpu",
    "rom-zip",
    "rom-gzip",
    "rom-7z",
]
frontend = [
    "dep:env_logger",
    "dep:serde",
    "dep:serde_json",
    "dep:winit",
    "dep:winit_input_helper",
]
frontend-pixels = ["frontend", "dep:pixels"]
frontend-wgpu = ["frontend", "dep:wgpu", "dep:naga", "dep:pollster"]
rom-zip = ["dep:zip"]
rom-gzip = ["dep:flate2"]
rom-7z = ["dep:sevenz-rust"]

[lib]
name = "gabalah"
path = "src/lib.rs"

[[bin]]
name = "gabalah"
path = "src/main.rs"
required-features = ["frontend"]

[[test]]
name = "ops"
path = "tests/ops.rs"

[dependencies]
byteorder = "1"
env_logger = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
log = "0.4"
pixels = { version = "0.15", optional = true }
pollster = { version = "0.3", optional = true }
sevenz-rust = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
zip = { version = "0.6", optional = true }
naga = { version = "0.19", features = ["wgsl-in"], optional = true }
wgpu = { version = "0.19", optional = true }
winit = { version = "0.29", optional = true }
winit_input_helper = { version = "0.15", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "renderer"
harness = false

[[bench]]
name = "cpu"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[package.metadata.bundle]
name = "Gabalah"
identifier = "io.github.philipp.gabalah"
icon = ["assets/icons/gabalah.ico", "assets/icons/icon.iconset/*.png"]
short_description = "A Game Boy emulator with shader-driven display effects."
